Fix footer breaking clickable pagination

--- a/public/steam/index.html
+++ b/public/steam/index.html
@@ -6,6 +6,7 @@
     <title>Not Yet Games Steam Helpers</title>
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="common.css">
 </head>
 
 <body>
@@ -24,7 +25,9 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="SteamTags.user.js"><h2>User script</h2></a>
+                <a href="SteamTags.user.js">
+                    <h2>User script</h2>
+                </a>
                 <p>It will add the following buttons besides the tags list on steam</p>
                 <img class="img-fluid" src="../images/example_userscript.png">
             </div>
@@ -32,7 +35,9 @@
         <hr>
         <div class="row">
             <div class="col-md-12">
-                <a href="tags.html"><h2>Steam tags</h2></a>
+                <a href="tags.html">
+                    <h2>Steam tags</h2>
+                </a>
                 <p>Allows you to give it a list of games and it will retrieve the tags of those games + the top tags by
                     appearance(frequency)</p>
                 <p>For example the following list:</p>
@@ -50,9 +55,7 @@ https://store.steampowered.com/app/357310/Oriental_Empires/
 
     </div>
 
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- This include popper -->
-    <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+    <div class="row spacer"></div>
 
     <!-- Footer -->
     <footer class="font-small blue fixed-bottom">
@@ -61,6 +64,11 @@ https://store.steampowered.com/app/357310/Oriental_Empires/
             (wishlist us)
         </div>
     </footer>
+
+
+    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+    <!-- This include popper -->
+    <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 
