--- a/public/steam/tags.html
+++ b/public/steam/tags.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/fontawesome-all.css">
     <link rel="stylesheet" href="../css/bootstrap-table.min.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="tags.css">
 </head>
 
@@ -51,6 +52,16 @@
         </div>
 
     </div>
+    <div class="row spacer"></div>
+
+    <!-- Footer -->
+    <footer class="font-small blue fixed-bottom">
+        <div class="footer-copyright text-center py-3 ">Made with 💖 by
+            <a class="" href="https://store.steampowered.com/app/790360/WarriOrb/" target="_blank">WarriOrb</a>
+            (wishlist us)
+        </div>
+    </footer>
+
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
@@ -60,13 +71,6 @@
 
     <script type="text/javascript" src="tags.js"></script>
 
-    <!-- Footer -->
-    <footer class="font-small blue fixed-bottom">
-        <div class="footer-copyright text-center py-3 ">Made with 💖 by
-            <a class="" href="https://store.steampowered.com/app/790360/WarriOrb/" target="_blank">WarriOrb</a>
-            (wishlist us)
-        </div>
-    </footer>
 </body>
 
 
