Add player counts table

--- a/public/steam/tags.html
+++ b/public/steam/tags.html
@@ -52,6 +52,22 @@
 
         </div>
 
+        <div class="container" id="player-counts-root">
+            <h3>Player counts</h3>
+            <div class="alert alert-info" role="alert">
+                Shows player counts by using the steamdb page <a href="https://steamdb.info/graph/" target="_blank">(See here)</a>
+                <p>
+                    This is useful because the steam recommendation feed selects games by recently played games compared to yours.
+                </p>
+                <p>
+                    From Steam: <q>This product was recommended to users here based on similarity to the games they have played recently.</q>
+                </p>
+            </div>
+            <table id="table-player-counts"></table>
+        </div>
+
+        <hr>
+
         <div class="container" id="tags-root">
             <h3>Tags</h3>
             <div class="alert alert-info" role="alert">
